fix: CSS transitions slow on mobile Chrome
Caused by missing z-index for the sticky section-header div.

--- a/hours/_includes/style.css
+++ b/hours/_includes/style.css
@@ -93,9 +93,10 @@ table#opening-hours {
 			background-color: rgb(245 245 245);
 
 			div {
-				max-width: calc(100vw - 60px);
+				width: calc(100vw - 60px);
 				position: sticky;
 				left: 30px;
+				z-index: 4;
 			}
 		}
 	}
